workloads/medium-place/gitea/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet

metadata:
  name: gitea
  namespace: medium-place
  labels:
    app.kubernetes.io/name: gitea
    app.kubernetes.io/part-of: gitea
    app.kubernetes.io/version: 1.17.0

spec:
  replicas: 1
  revisionHistoryLimit: 5

  selector:
    matchLabels:
      app.kubernetes.io/name: gitea
      app.kubernetes.io/part-of: gitea

  template:
    metadata:
      annotations:
        backup.velero.io/backup-volumes: data
        diun.enable: "true"
        diun.regopt: docker.io
        diun.watch_repo: "true"
        diun.include_tags: "^\\d+\\.\\d+\\.\\d+$"
        diun.sort_tags: "semver"
      labels:
        app.kubernetes.io/name: gitea
        app.kubernetes.io/part-of: gitea
        app.kubernetes.io/version: 1.17.0

    spec:
      containers:
        - name: gitea
          image: gitea/gitea:1.17.0

          volumeMounts:
            - name: data
              mountPath: /data

          ports:
            - name: http
              protocol: TCP
              containerPort: 3000
            - name: ssh
              protocol: TCP
              containerPort: 22

  volumeClaimTemplates:
    - metadata:
        name: data
        namespace: medium-place

      spec:
        accessModes:
          - ReadWriteOnce
        volumeMode: Filesystem
        resources:
          requests:
            storage: 1Gi
