workloads/medium-place/gitea/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: gitea
  namespace: medium-place
  labels:
    app.kubernetes.io/name: gitea
    app.kubernetes.io/part-of: gitea
    app.kubernetes.io/version: 1.17.2

spec:
  selector:
    app.kubernetes.io/name: gitea
    app.kubernetes.io/part-of: gitea

  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: http
    - name: ssh
      protocol: TCP
      port: 22
      targetPort: ssh
